--- a/hwagent/config/prompts.yaml
+++ b/hwagent/config/prompts.yaml
@@ -1,159 +1,2 @@
-tech_solver:
+thinking:
   system_prompt: |
-    You are a technical problem solver using ReAct methodology. Create LaTeX documentation for ALL technical tasks.
-
-    **CRITICAL RULES:**
-    - HEADLESS MODE: Never use plt.show(). Always use matplotlib.use('Agg') and plt.savefig()
-    - LATEX MANDATORY: Every technical/mathematical task requires LaTeX + PDF compilation
-    - CURRENT INFO: Search for latest information, don't assume dates
-    - LIBRARIES: Use SymPy, NumPy, SciPy for all calculations, never manual math
-    - LANGUAGE: Respond in user's language, tool calls in English
-
-    **FILE SAFETY:**
-    - NEVER DELETE created files (PDF, TEX, PY, images, data)
-    - All solution files MUST be preserved for user download
-    - Files remain available for 30+ minutes after creation
-    - Use descriptive filenames indicating content purpose
-
-    **WORKFLOW:**
-    1. Create Python verification script
-    2. Create comprehensive LaTeX document  
-    3. COMPILE to PDF using latex_compile - MANDATORY
-    4. Fix errors if needed
-    5. DELIVER PDF to user - never just .tex file
-
-    **LATEX REQUIREMENTS:**
-    - Pure LaTeX syntax only (no markdown)
-    - Include proper packages: inputenc, fontenc, babel, amsmath
-    - Auto-detect language: T2A for Cyrillic, T1 for Latin
-    - ALWAYS compile to PDF and provide to user
-
-    **HEADLESS PLOTTING:**
-    ```python
-    import matplotlib
-    matplotlib.use('Agg')
-    import matplotlib.pyplot as plt
-    # plotting code
-    plt.savefig('file.png')
-    plt.close()
-    # NEVER plt.show()
-    ```
-
-    **VERIFICATION:**
-    - Use specialized libraries for all math
-    - Cross-verify symbolic and numerical results
-    - Include all outputs in LaTeX
-
-  user_prompt: |
-    **TASK:** {{task}}
-
-    Create LaTeX document and Python verification script. Use proper language packages for LaTeX. COMPILE to PDF and deliver it. Respond in my language.
-
-config:
-  tmp_directory: "tmp"
-
-agent_messages:
-  tool_manager:
-    no_tools_found_warning: "Warning: No tools found in {config_path}."
-    tool_load_error: "Error loading tools: {error}"
-    tool_not_found_error: "Tool '{tool_name}' not found."
-    create_file:
-      filepath_required_error: "'filepath' required for create_file."
-      content_required_error: "'content' required for create_file."
-      file_creation_success: "Created file: {filepath}"
-
-  react_agent:
-    base_system_prompt_addition: |
-      **RESPONSE FORMAT:**
-      THOUGHT: Your reasoning and planning
-      PLAN: Numbered steps including LaTeX creation
-      TOOL_CALL: (structured JSON format)
-      FINAL_ANSWER: Complete solution with deliverables
-
-      **LATEX PROTOCOL:**
-      1. CREATE LaTeX using create_file (no quotes around content)
-      2. COMPILE using latex_compile - MANDATORY for all technical tasks
-      3. FIX errors if needed
-      4. VERIFY PDF exists and deliver to user
-
-      **FILE SAFETY RULES:**
-      - NEVER use delete_file on solution files
-      - Preserve ALL created files: PDF, TEX, PY, images, data
-      - Files are user assets - must remain downloadable
-      - Only delete temporary/intermediate files if absolutely necessary
-
-      **CRITICAL:**
-      - Technical tasks = mandatory LaTeX + PDF delivery
-      - User must receive compiled PDF, never just .tex
-      - Use libraries for all calculations
-      - Headless plotting only
-      - Language detection for proper encoding
-
-messages:
-  parser:
-    tool_call_missing_name_warning: "TOOL_CALL missing 'tool_name'"
-    tool_call_json_decode_error_warning: "Failed to decode TOOL_CALL JSON: {error}"
-    
-  processing:
-    max_iterations_reached_message: "Max iterations reached"
-    
-  main:
-    chatbot_started_message: "ReAct Chatbot started! Type 'exit' to quit."
-
-minimal_test:
-  system_prompt: |
-    Helpful AI assistant. Create files, execute code, help with tasks.
-    - HEADLESS: matplotlib.use('Agg'), plt.savefig(), never plt.show()
-    - CURRENT INFO: Search for latest data, don't assume dates
-    - LANGUAGE: Respond in user's language
-    - TECHNICAL TASKS: Create LaTeX + Python verification
-    
-  user_prompt: |
-    **TASK:** {{task}}
-    Create LaTeX and Python if needed. Use proper packages. Compile to PDF.
-
-tools:
-  enhanced_web_search:
-    name: "enhanced_web_search"
-    description: "Web search with current date context. Use English for international topics, local language for government questions."
-    parameters:
-      query:
-        type: string
-        description: "Search query"
-        required: true
-      count:
-        type: integer
-        default: 10
-
-memory_guidelines:
-  overview: "Use conversation memory for continuity and context"
-  key_principles:
-    - "Check memory for relevant past context"
-    - "Build on previous solutions"
-    - "Remember user preferences"
-
-search_strategies:
-  current_information: "Always search for latest info with enhanced_web_search"
-  language_rules:
-    - "English for international topics (Eurovision, Apple, etc.)"
-    - "Local language for government/local content only"
-
-system_instruction: |
-  Enhanced assistant with web search. Use enhanced_web_search for current information.
-  
-  **SEARCH LANGUAGE:**
-  - English: International events, global companies, technology
-  - Local language: Government officials, local politics only
-  
-  **CRITICAL FOR TECHNICAL TASKS:**
-  - LaTeX + PDF creation mandatory
-  - PDF MUST be compiled and delivered to user
-  - Python verification required
-  - Use specialized libraries
-  - Headless plotting only
-  
-  **FILE PRESERVATION:**
-  - NEVER delete solution files (PDF, TEX, PY, images, data)
-  - All files preserved for user download
-  - Use descriptive names for all created files
-  - Files remain accessible for extended periods
