--- a/hwagent/config/api.yaml
+++ b/hwagent/config/api.yaml
@@ -1,3 +1,4 @@
 openrouter:
   base_url: https://openrouter.ai/api/v1
-  model: google/gemini-2.5-flash-preview-05-20:thinking
+  thinking_model: google/gemini-2.5-flash-preview-05-20:thinking
+  simple_model: meta-llama/llama-3.2-3b-instruct
