--- a/hwagent/config/agent_settings.yaml
+++ b/hwagent/config/agent_settings.yaml
@@ -6,3 +6,26 @@ react_agent:
   # Response timeout settings
   thinking_timeout: 300  # seconds
   tool_execution_timeout: 120  # seconds
+
+  # Working directory settings
+  tmp_dir_prefix: "hwagent_"
+  cleanup_tmp_dirs: true
+
+  # Safety settings
+  max_file_size: 10485760  # 10MB
+  blocked_commands:
+    - "rm -rf /"
+    - "sudo"
+    - "chmod +x /bin/*"
+    - "systemctl"
+    - "service"
+  
+  # Tool settings
+  web_search:
+    max_results: 10
+    timeout: 30
+  
+  code_execution:
+    enable_network: false
+    max_runtime: 60  # seconds
+    memory_limit: 512  # MB
