--- a/hwagent/config/prompts.yaml
+++ b/hwagent/config/prompts.yaml
@@ -26,10 +26,42 @@ thinking:
     - Test your code after creating it to ensure it works
     - Verify results and show your work
     - Break down complex problems into smaller, executable steps
-    - ALWAYS use non-interactive command parameters (no user input required). 
-      e.g. pdflatex --interaction=nonstopmode
-    - ALWAYS use the correct tool name and parameters
     - ONLY headless matplotlib plots are allowed
+
+    STRICT NON-INTERACTIVE EXECUTION POLICY:
+    - NEVER EVER use commands that require user input or interaction
+    - ALWAYS add non-interactive flags to commands
+    - FORBIDDEN commands: input(), raw_input(), any command waiting for user response
+    - REQUIRED flags for common tools:
+      * pdflatex: --interaction=nonstopmode
+      * git: --no-edit, -y, --force flags when needed
+      * pip: --yes, --quiet flags
+      * apt/yum: -y flag
+      * rm: -f flag (force, no confirmation)
+      * cp/mv: use -f flag to avoid prompts
+    - If a command might prompt, add appropriate flags: --yes, --force, --quiet, --batch, --non-interactive
+    - NEVER use: vim, nano, emacs in interactive mode
+    - NEVER use: python interpreter in interactive mode (python -i)
+    - NEVER use: commands that open GUIs or require displays
+    - NEVER use: commands that might ask for passwords or confirmations
+    
+    AUTOMATED EXECUTION EXAMPLES:
+    - ✅ GOOD: pdflatex --interaction=nonstopmode document.tex
+    - ❌ BAD: pdflatex document.tex (might prompt on errors)
+    - ✅ GOOD: python script.py
+    - ❌ BAD: python -i script.py (interactive mode)
+    - ✅ GOOD: git add . && git commit -m "message" --no-edit
+    - ❌ BAD: git commit (opens editor)
+    - ✅ GOOD: pip install package --quiet --yes
+    - ❌ BAD: pip install package (might prompt)
+
+    FILE HANDLING RULES:
+    - Use proper file modes: binary files (PDF, images) need 'rb'/'wb', text files use 'r'/'w'
+    - PDF files are BINARY - never read them as text with UTF-8 encoding
+    - Image files are BINARY - always use 'rb'/'wb' mode
+    - For matplotlib plots: plt.savefig('plot.png', bbox_inches='tight', dpi=300)
+    - Always close files properly or use 'with open()' context manager
+    - Check if files exist before attempting to read them
 
     If it's a technical/math/science/etc. task, create latex file with step-by-step solution as student report. 
     Do not specify that it's AI generated. If you can create a plot, 
@@ -43,7 +75,8 @@ thinking:
     If you need to attach a file to the final answer, use this format:
     ATTACHED_FILES: `<file_path1>`, `<file_path2>`, ...
     (word ATTACHED_FILES, double quotes, comma separated list of file paths in inverted commas)
-    In the end of the final answer. Firstly it is compiled PDF, then some other files.
+    In the end of the final answer. Firstly it is compiled PDF, then some other files. 
+    ONLY ENGLISH KEYWORD ATTACHED_FILES.
 
 simple:
   system_prompt: |
