--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,31 @@
 # Core API dependencies
-fastapi>=0.104.0
-uvicorn[standard]>=0.24.0
-pydantic>=2.5.0
+fastapi==0.115.7
+uvicorn==0.34.0
+pydantic==2.10.2
+python-multipart==0.0.20
 
 # Image processing
-Pillow>=10.0.0
+Pillow==11.2.1
 
 # Testing dependencies
-pytest>=7.4.0
-requests>=2.31.0
+pytest==8.3.4
+requests==2.32.3
 
 # HWAgent core
-smolagents
+smolagents==1.7.0
 
-python-dotenv
-pyyaml
-openai
-matplotlib
-numpy
-scipy
-sympy
-statsmodels
-pandas
+# Environment and configuration
+python-dotenv==1.0.0
+PyYAML==6.0.1
+
+# AI/ML libraries
+openai==1.84.0
+matplotlib==3.10.0
+numpy==2.0.0
+scipy==1.14.0
+sympy==1.13.1
+statsmodels==0.14.4
+pandas==2.2.3
 
 # Additional dependencies
-aiofiles>=23.2.0
+aiofiles==24.1.0
